// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prefixAttributesCreator Returns prefixed object with custom values 1`] = `
Object {
  "button-padding-bottom-general": Object {
    "default": 30,
    "type": "string",
  },
  "button-padding-bottom-l": Object {
    "type": "string",
  },
  "button-padding-bottom-m": Object {
    "type": "string",
  },
  "button-padding-bottom-s": Object {
    "type": "string",
  },
  "button-padding-bottom-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-bottom-unit-l": Object {
    "type": "string",
  },
  "button-padding-bottom-unit-m": Object {
    "type": "string",
  },
  "button-padding-bottom-unit-s": Object {
    "type": "string",
  },
  "button-padding-bottom-unit-xl": Object {
    "type": "string",
  },
  "button-padding-bottom-unit-xs": Object {
    "type": "string",
  },
  "button-padding-bottom-unit-xxl": Object {
    "type": "string",
  },
  "button-padding-bottom-xl": Object {
    "type": "string",
  },
  "button-padding-bottom-xs": Object {
    "type": "string",
  },
  "button-padding-bottom-xxl": Object {
    "type": "string",
  },
  "button-padding-left-general": Object {
    "type": "string",
  },
  "button-padding-left-l": Object {
    "type": "string",
  },
  "button-padding-left-m": Object {
    "type": "string",
  },
  "button-padding-left-s": Object {
    "type": "string",
  },
  "button-padding-left-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-left-unit-l": Object {
    "type": "string",
  },
  "button-padding-left-unit-m": Object {
    "type": "string",
  },
  "button-padding-left-unit-s": Object {
    "type": "string",
  },
  "button-padding-left-unit-xl": Object {
    "type": "string",
  },
  "button-padding-left-unit-xs": Object {
    "type": "string",
  },
  "button-padding-left-unit-xxl": Object {
    "type": "string",
  },
  "button-padding-left-xl": Object {
    "type": "string",
  },
  "button-padding-left-xs": Object {
    "type": "string",
  },
  "button-padding-left-xxl": Object {
    "type": "string",
  },
  "button-padding-right-general": Object {
    "type": "string",
  },
  "button-padding-right-l": Object {
    "type": "string",
  },
  "button-padding-right-m": Object {
    "type": "string",
  },
  "button-padding-right-s": Object {
    "type": "string",
  },
  "button-padding-right-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-right-unit-l": Object {
    "type": "string",
  },
  "button-padding-right-unit-m": Object {
    "type": "string",
  },
  "button-padding-right-unit-s": Object {
    "type": "string",
  },
  "button-padding-right-unit-xl": Object {
    "type": "string",
  },
  "button-padding-right-unit-xs": Object {
    "type": "string",
  },
  "button-padding-right-unit-xxl": Object {
    "type": "string",
  },
  "button-padding-right-xl": Object {
    "type": "string",
  },
  "button-padding-right-xs": Object {
    "type": "string",
  },
  "button-padding-right-xxl": Object {
    "type": "string",
  },
  "button-padding-sync-general": Object {
    "default": "all",
    "type": "string",
  },
  "button-padding-sync-l": Object {
    "type": "string",
  },
  "button-padding-sync-m": Object {
    "type": "string",
  },
  "button-padding-sync-s": Object {
    "type": "string",
  },
  "button-padding-sync-xl": Object {
    "type": "string",
  },
  "button-padding-sync-xs": Object {
    "type": "string",
  },
  "button-padding-sync-xxl": Object {
    "type": "string",
  },
  "button-padding-top-general": Object {
    "type": "string",
  },
  "button-padding-top-l": Object {
    "type": "string",
  },
  "button-padding-top-m": Object {
    "type": "string",
  },
  "button-padding-top-s": Object {
    "type": "string",
  },
  "button-padding-top-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-top-unit-l": Object {
    "type": "string",
  },
  "button-padding-top-unit-m": Object {
    "type": "string",
  },
  "button-padding-top-unit-s": Object {
    "type": "string",
  },
  "button-padding-top-unit-xl": Object {
    "type": "string",
  },
  "button-padding-top-unit-xs": Object {
    "type": "string",
  },
  "button-padding-top-unit-xxl": Object {
    "type": "string",
  },
  "button-padding-top-xl": Object {
    "type": "string",
  },
  "button-padding-top-xs": Object {
    "type": "string",
  },
  "button-padding-top-xxl": Object {
    "type": "string",
  },
}
`;

exports[`prefixAttributesCreator Returns prefixed object with default values 1`] = `
Object {
  "button-border-bottom-width-general": Object {
    "default": 2,
    "type": "number",
  },
  "button-border-bottom-width-l": Object {
    "type": "number",
  },
  "button-border-bottom-width-m": Object {
    "type": "number",
  },
  "button-border-bottom-width-s": Object {
    "type": "number",
  },
  "button-border-bottom-width-xl": Object {
    "type": "number",
  },
  "button-border-bottom-width-xs": Object {
    "type": "number",
  },
  "button-border-bottom-width-xxl": Object {
    "type": "number",
  },
  "button-border-left-width-general": Object {
    "default": 2,
    "type": "number",
  },
  "button-border-left-width-l": Object {
    "type": "number",
  },
  "button-border-left-width-m": Object {
    "type": "number",
  },
  "button-border-left-width-s": Object {
    "type": "number",
  },
  "button-border-left-width-xl": Object {
    "type": "number",
  },
  "button-border-left-width-xs": Object {
    "type": "number",
  },
  "button-border-left-width-xxl": Object {
    "type": "number",
  },
  "button-border-right-width-general": Object {
    "default": 2,
    "type": "number",
  },
  "button-border-right-width-l": Object {
    "type": "number",
  },
  "button-border-right-width-m": Object {
    "type": "number",
  },
  "button-border-right-width-s": Object {
    "type": "number",
  },
  "button-border-right-width-xl": Object {
    "type": "number",
  },
  "button-border-right-width-xs": Object {
    "type": "number",
  },
  "button-border-right-width-xxl": Object {
    "type": "number",
  },
  "button-border-sync-width-general": Object {
    "default": "all",
    "type": "string",
  },
  "button-border-sync-width-l": Object {
    "type": "string",
  },
  "button-border-sync-width-m": Object {
    "type": "string",
  },
  "button-border-sync-width-s": Object {
    "type": "string",
  },
  "button-border-sync-width-xl": Object {
    "type": "string",
  },
  "button-border-sync-width-xs": Object {
    "type": "string",
  },
  "button-border-sync-width-xxl": Object {
    "type": "string",
  },
  "button-border-top-width-general": Object {
    "default": 2,
    "type": "number",
  },
  "button-border-top-width-l": Object {
    "type": "number",
  },
  "button-border-top-width-m": Object {
    "type": "number",
  },
  "button-border-top-width-s": Object {
    "type": "number",
  },
  "button-border-top-width-xl": Object {
    "type": "number",
  },
  "button-border-top-width-xs": Object {
    "type": "number",
  },
  "button-border-top-width-xxl": Object {
    "type": "number",
  },
  "button-border-unit-width-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-border-unit-width-l": Object {
    "type": "string",
  },
  "button-border-unit-width-m": Object {
    "type": "string",
  },
  "button-border-unit-width-s": Object {
    "type": "string",
  },
  "button-border-unit-width-xl": Object {
    "type": "string",
  },
  "button-border-unit-width-xs": Object {
    "type": "string",
  },
  "button-border-unit-width-xxl": Object {
    "type": "string",
  },
  "button-box-shadow-blur-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-unit-general-hover": Object {
    "type": "string",
  },
  "button-box-shadow-blur-unit-l-hover": Object {
    "type": "string",
  },
  "button-box-shadow-blur-unit-m-hover": Object {
    "type": "string",
  },
  "button-box-shadow-blur-unit-s-hover": Object {
    "type": "string",
  },
  "button-box-shadow-blur-unit-xl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-blur-unit-xs-hover": Object {
    "type": "string",
  },
  "button-box-shadow-blur-unit-xxl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-blur-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-blur-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-color-general-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-l-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-m-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-s-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-xl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-xs-hover": Object {
    "type": "string",
  },
  "button-box-shadow-color-xxl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-unit-general-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-unit-l-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-unit-m-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-unit-s-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-unit-xl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-unit-xs-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-unit-xxl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-horizontal-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-horizontal-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-inset-general-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-inset-l-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-inset-m-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-inset-s-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-inset-xl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-inset-xs-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-inset-xxl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-color-general-hover": Object {
    "default": 6,
    "type": "number",
  },
  "button-box-shadow-palette-color-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-color-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-opacity-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-palette-sc-status-general-hover": Object {
    "default": false,
    "type": "boolean",
  },
  "button-box-shadow-palette-sc-status-l-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-sc-status-m-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-sc-status-s-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-sc-status-xl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-sc-status-xs-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-sc-status-xxl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-general-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-l-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-m-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-s-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xs-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-palette-status-xxl-hover": Object {
    "type": "boolean",
  },
  "button-box-shadow-spread-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-unit-general-hover": Object {
    "type": "string",
  },
  "button-box-shadow-spread-unit-l-hover": Object {
    "type": "string",
  },
  "button-box-shadow-spread-unit-m-hover": Object {
    "type": "string",
  },
  "button-box-shadow-spread-unit-s-hover": Object {
    "type": "string",
  },
  "button-box-shadow-spread-unit-xl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-spread-unit-xs-hover": Object {
    "type": "string",
  },
  "button-box-shadow-spread-unit-xxl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-spread-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-spread-xxl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-status-hover": Object {
    "default": false,
    "type": "boolean",
  },
  "button-box-shadow-vertical-general-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-l-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-m-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-s-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-unit-general-hover": Object {
    "type": "string",
  },
  "button-box-shadow-vertical-unit-l-hover": Object {
    "type": "string",
  },
  "button-box-shadow-vertical-unit-m-hover": Object {
    "type": "string",
  },
  "button-box-shadow-vertical-unit-s-hover": Object {
    "type": "string",
  },
  "button-box-shadow-vertical-unit-xl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-vertical-unit-xs-hover": Object {
    "type": "string",
  },
  "button-box-shadow-vertical-unit-xxl-hover": Object {
    "type": "string",
  },
  "button-box-shadow-vertical-xl-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-xs-hover": Object {
    "type": "number",
  },
  "button-box-shadow-vertical-xxl-hover": Object {
    "type": "number",
  },
  "button-margin-bottom-general": Object {
    "type": "string",
  },
  "button-margin-bottom-l": Object {
    "type": "string",
  },
  "button-margin-bottom-m": Object {
    "type": "string",
  },
  "button-margin-bottom-s": Object {
    "type": "string",
  },
  "button-margin-bottom-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-margin-bottom-unit-l": Object {
    "type": "string",
  },
  "button-margin-bottom-unit-m": Object {
    "type": "string",
  },
  "button-margin-bottom-unit-s": Object {
    "type": "string",
  },
  "button-margin-bottom-unit-xl": Object {
    "type": "string",
  },
  "button-margin-bottom-unit-xs": Object {
    "type": "string",
  },
  "button-margin-bottom-unit-xxl": Object {
    "type": "string",
  },
  "button-margin-bottom-xl": Object {
    "type": "string",
  },
  "button-margin-bottom-xs": Object {
    "type": "string",
  },
  "button-margin-bottom-xxl": Object {
    "type": "string",
  },
  "button-margin-left-general": Object {
    "type": "string",
  },
  "button-margin-left-l": Object {
    "type": "string",
  },
  "button-margin-left-m": Object {
    "type": "string",
  },
  "button-margin-left-s": Object {
    "type": "string",
  },
  "button-margin-left-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-margin-left-unit-l": Object {
    "type": "string",
  },
  "button-margin-left-unit-m": Object {
    "type": "string",
  },
  "button-margin-left-unit-s": Object {
    "type": "string",
  },
  "button-margin-left-unit-xl": Object {
    "type": "string",
  },
  "button-margin-left-unit-xs": Object {
    "type": "string",
  },
  "button-margin-left-unit-xxl": Object {
    "type": "string",
  },
  "button-margin-left-xl": Object {
    "type": "string",
  },
  "button-margin-left-xs": Object {
    "type": "string",
  },
  "button-margin-left-xxl": Object {
    "type": "string",
  },
  "button-margin-right-general": Object {
    "type": "string",
  },
  "button-margin-right-l": Object {
    "type": "string",
  },
  "button-margin-right-m": Object {
    "type": "string",
  },
  "button-margin-right-s": Object {
    "type": "string",
  },
  "button-margin-right-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-margin-right-unit-l": Object {
    "type": "string",
  },
  "button-margin-right-unit-m": Object {
    "type": "string",
  },
  "button-margin-right-unit-s": Object {
    "type": "string",
  },
  "button-margin-right-unit-xl": Object {
    "type": "string",
  },
  "button-margin-right-unit-xs": Object {
    "type": "string",
  },
  "button-margin-right-unit-xxl": Object {
    "type": "string",
  },
  "button-margin-right-xl": Object {
    "type": "string",
  },
  "button-margin-right-xs": Object {
    "type": "string",
  },
  "button-margin-right-xxl": Object {
    "type": "string",
  },
  "button-margin-sync-general": Object {
    "default": "all",
    "type": "string",
  },
  "button-margin-sync-l": Object {
    "type": "string",
  },
  "button-margin-sync-m": Object {
    "type": "string",
  },
  "button-margin-sync-s": Object {
    "type": "string",
  },
  "button-margin-sync-xl": Object {
    "type": "string",
  },
  "button-margin-sync-xs": Object {
    "type": "string",
  },
  "button-margin-sync-xxl": Object {
    "type": "string",
  },
  "button-margin-top-general": Object {
    "type": "string",
  },
  "button-margin-top-l": Object {
    "type": "string",
  },
  "button-margin-top-m": Object {
    "type": "string",
  },
  "button-margin-top-s": Object {
    "type": "string",
  },
  "button-margin-top-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-margin-top-unit-l": Object {
    "type": "string",
  },
  "button-margin-top-unit-m": Object {
    "type": "string",
  },
  "button-margin-top-unit-s": Object {
    "type": "string",
  },
  "button-margin-top-unit-xl": Object {
    "type": "string",
  },
  "button-margin-top-unit-xs": Object {
    "type": "string",
  },
  "button-margin-top-unit-xxl": Object {
    "type": "string",
  },
  "button-margin-top-xl": Object {
    "type": "string",
  },
  "button-margin-top-xs": Object {
    "type": "string",
  },
  "button-margin-top-xxl": Object {
    "type": "string",
  },
}
`;

exports[`prefixAttributesCreator Returns prefixed object with excluded values 1`] = `
Object {
  "button-padding-left-general": Object {
    "type": "string",
  },
  "button-padding-left-l": Object {
    "type": "string",
  },
  "button-padding-left-m": Object {
    "type": "string",
  },
  "button-padding-left-s": Object {
    "type": "string",
  },
  "button-padding-left-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-left-unit-l": Object {
    "type": "string",
  },
  "button-padding-left-unit-m": Object {
    "type": "string",
  },
  "button-padding-left-unit-s": Object {
    "type": "string",
  },
  "button-padding-left-unit-xl": Object {
    "type": "string",
  },
  "button-padding-left-unit-xs": Object {
    "type": "string",
  },
  "button-padding-left-unit-xxl": Object {
    "type": "string",
  },
  "button-padding-left-xl": Object {
    "type": "string",
  },
  "button-padding-left-xs": Object {
    "type": "string",
  },
  "button-padding-left-xxl": Object {
    "type": "string",
  },
  "button-padding-right-general": Object {
    "type": "string",
  },
  "button-padding-right-l": Object {
    "type": "string",
  },
  "button-padding-right-m": Object {
    "type": "string",
  },
  "button-padding-right-s": Object {
    "type": "string",
  },
  "button-padding-right-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-right-unit-l": Object {
    "type": "string",
  },
  "button-padding-right-unit-m": Object {
    "type": "string",
  },
  "button-padding-right-unit-s": Object {
    "type": "string",
  },
  "button-padding-right-unit-xl": Object {
    "type": "string",
  },
  "button-padding-right-unit-xs": Object {
    "type": "string",
  },
  "button-padding-right-unit-xxl": Object {
    "type": "string",
  },
  "button-padding-right-xl": Object {
    "type": "string",
  },
  "button-padding-right-xs": Object {
    "type": "string",
  },
  "button-padding-right-xxl": Object {
    "type": "string",
  },
  "button-padding-sync-general": Object {
    "default": "all",
    "type": "string",
  },
  "button-padding-sync-l": Object {
    "type": "string",
  },
  "button-padding-sync-m": Object {
    "type": "string",
  },
  "button-padding-sync-s": Object {
    "type": "string",
  },
  "button-padding-sync-xl": Object {
    "type": "string",
  },
  "button-padding-sync-xs": Object {
    "type": "string",
  },
  "button-padding-sync-xxl": Object {
    "type": "string",
  },
  "button-padding-top-general": Object {
    "type": "string",
  },
  "button-padding-top-l": Object {
    "type": "string",
  },
  "button-padding-top-m": Object {
    "type": "string",
  },
  "button-padding-top-s": Object {
    "type": "string",
  },
  "button-padding-top-unit-general": Object {
    "default": "px",
    "type": "string",
  },
  "button-padding-top-unit-l": Object {
    "type": "string",
  },
  "button-padding-top-unit-m": Object {
    "type": "string",
  },
  "button-padding-top-unit-s": Object {
    "type": "string",
  },
  "button-padding-top-unit-xl": Object {
    "type": "string",
  },
  "button-padding-top-unit-xs": Object {
    "type": "string",
  },
  "button-padding-top-unit-xxl": Object {
    "type": "string",
  },
  "button-padding-top-xl": Object {
    "type": "string",
  },
  "button-padding-top-xs": Object {
    "type": "string",
  },
  "button-padding-top-xxl": Object {
    "type": "string",
  },
}
`;
